# lets_learn_sfml

./: .gitignore  README.md
calculator/: CMakeLists.txt  README.md  cpp-calc-draft.txt
calculator/lib/Interpolated/: Interpolated.cpp  Interpolated.hpp
calculator/res/shader/: fxaa.frag
calculator/res/shader/shape_shader/: shade_rounded_rect.frag
calculator/src/app/: config.hpp  draw_numdisplay.cpp  draw_numpad.cpp  event.cpp  event.hpp  helpers.hpp  interaction_processor.cpp  main.cpp  window.cpp  window.hpp
calculator/src/ui/Graphics/: Color.hpp  Drawable.hpp  Interactable.hpp  RenderTarget.hpp  RenderWindow.cpp  RerderWindow.hpp  states.hpp
calculator/src/ui/Primitives/: Button.cpp  Button.hpp
calculator/src/ui/event/: event.cpp  events.hpp
calculator/src/ui/shapes/: GlShapes.hpp  basicShape.cpp  basicShape.hpp
calculator/src/util/: bound.hpp  sort.hpp  time.hpp
dragg/: CMakeLists.txt  README.md
dragg/lib/: range
dragg/src/: config.hpp  main.cpp
dragg/src/app/: main.cpp
dragg/src/gui/: Drawable.hpp  RenderManager.cpp  RenderManager.hpp  RenderTexture.hpp  ViewPort.cpp  ViewPort.hpp  Viewport.hpp
dragg/src/gui/Events/: event.cpp  events.hpp
dragg/src/gui/Interpolated/: Interpolated.cpp  Interpolated.hpp
dragg/src/gui/Shapes/: BasicShape.cpp  Shapes.hpp
interpolated/: CMakeLists.txt
interpolated/src/: Interpolated.cpp  Interpolated.hpp  config.hpp  event.cpp  events.hpp  main.cpp
stars/: CMakeLists.txt
stars/src/: config.hpp  event.cpp  events.hpp  main.cpp  star.hpp
